Bug fix - Footer overflow : Changed vh on grid-2

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,8 +70,8 @@ input[type=submit] {
 }
 .grid-2 {
   display: grid;
-  grid-template-rows: 100px auto;
-  height: 90vh;
+  grid-template-rows: 6rem auto;
+  height: 85vh;
 }
 
 /* //////////////////////////////////////////////////////////////////////////////// 
