--- a/assets/sass/sections/_grid.scss
+++ b/assets/sass/sections/_grid.scss
@@ -11,7 +11,7 @@
 
     &-2{
     display: grid;
-    grid-template-rows: 100px auto;
-    height: 90vh;
+    grid-template-rows: 6rem auto;
+    height: 85vh;
     }
 }
